Revert "Use "new" dlcdn download URL"
This reverts commit 7205f8a89de058c12f5c6adff6d1c22a9b89ebe9.

--- a/download.html
+++ b/download.html
@@ -21,23 +21,23 @@ permalink: /download
                 </p>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6.tar.gz">tar.gz</a>
-                            [<a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.asc">PGP</a>]
-                            [<a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.6/apache-karaf-4.3.6.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6.zip">zip</a>
-                            [<a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6.zip.asc">PGP</a>]
-                            [<a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.6/apache-karaf-4.3.6.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz">tar.gz</a>
-                            [<a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6-src.zip">zip</a>
-                            [<a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6-src.zip.asc">PGP</a>]
-                            [<a href="https://dlcdn.apache.org/karaf/4.3.6/apache-karaf-4.3.6-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.6/apache-karaf-4.3.6-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.zip.sha512">SHA512</a>]
                 </p>
                 <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351123" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -54,23 +54,23 @@ permalink: /download
                 </p>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15.tar.gz">tar.gz</a>
-                            [<a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.asc">PGP</a>]
-                            [<a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.15/apache-karaf-4.2.15.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15.zip">zip</a>
-                            [<a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15.zip.asc">PGP</a>]
-                            [<a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.15/apache-karaf-4.2.15.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz">tar.gz</a>
-                            [<a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15-src.zip">zip</a>
-                            [<a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15-src.zip.asc">PGP</a>]
-                            [<a href="https://dlcdn.apache.org/karaf/4.2.15/apache-karaf-4.2.15-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.15/apache-karaf-4.2.15-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.zip.sha512">SHA512</a>]
                 </p>
                 <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351124" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -90,13 +90,13 @@ permalink: /download
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="https://dlcdn.apache.org/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz">tar.gz</a>
-                          [<a href="https://dlcdn.apache.org/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.asc">PGP</a>]
-                          [<a href="https://dlcdn.apache.org/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz">tar.gz</a>
+                          [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.sha512">SHA512</a>]
                   -
-                  <a href="https://dlcdn.apache.org/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip">zip</a>
-                          [<a href="https://dlcdn.apache.org/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.asc">PGP</a>]
-                          [<a href="https://dlcdn.apache.org/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip">zip</a>
+                          [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.sha512">SHA512</a>]
               </p>
               <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343975" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -114,13 +114,13 @@ permalink: /download
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="https://dlcdn.apache.org/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz">tar.gz</a>
-                          [<a href="https://dlcdn.apache.org/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz.asc">PGP</a>]
-                          [<a href="https://dlcdn.apache.org/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz">tar.gz</a>
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz.sha512">SHA512</a>]
                   -
-                  <a href="https://dlcdn.apache.org/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip">zip</a>
-                          [<a href="https://dlcdn.apache.org/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip.asc">PGP</a>]
-                          [<a href="https://dlcdn.apache.org/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip">zip</a>
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip.sha512">SHA512</a>]
               </p>
               <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350585" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -138,13 +138,13 @@ permalink: /download
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="https://dlcdn.apache.org/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz">tar.gz</a>
-                          [<a href="https://dlcdn.apache.org/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.asc">PGP</a>]
-                          [<a href="https://dlcdn.apache.org/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz">tar.gz</a>
+                          [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.sha512">SHA512</a>]
                   -
-                  <a href="https://dlcdn.apache.org/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip">zip</a>
-                          [<a href="https://dlcdn.apache.org/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.asc">PGP</a>]
-                          [<a href="https://dlcdn.apache.org/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip">zip</a>
+                          [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.sha512">SHA512</a>]
               </p>
               <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344252" role="button" target="_blank">Release note &raquo;</a>
             </div>
