Update download.html. Not Active class
Update download.html set class="text-danger" for the branch 4.2

--- a/download.html
+++ b/download.html
@@ -205,7 +205,7 @@ permalink: /download
                       <td>8 / 9 / 10 / 11</td>
                       <td>Pax Logging 1.1.13/log4j 2.17.1/logback 1.2.11</td>
                       <td>Pax Web 7.2.29/Jetty 9.4.43.v20210629</td>
-                      <td class="text-success">Not Active</td>
+                      <td class="text-danger">Not Active</td>
                       <td>4.2.15</td>
                       <td>4.2.16</td>
                       <td>Apr 22</td>
