--- a/archives.html
+++ b/archives.html
@@ -129,6 +129,16 @@ permalink: /archives
                         <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343304')">Release Notes</a></td>
                     </tr>
                     <tr>
+                        <td>4.2.16</td>
+                        <td><a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.16/apache-karaf-4.2.16-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351218')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>4.2.15</td>
                         <td><a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.sha512">SHA512</a>]<br>
                             <a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.sha512">SHA512</a>]
