--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf 4.2.16 has been released! (19/6/22)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes, including Pax URL 1.11.15. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf runtime 4.4.0 has been released! (22/4/22)</strong> - This is a new milestone in the Karaf runtime roadmap. This 4.4.x series supports OSGi R8 specification, and include major updates like Pax Web 8.x and Pax Logging 2.1.x. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -96,13 +103,6 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf 4.3.2 has been released! (14/05/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -142,7 +142,7 @@ permalink: /
         <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
         <p class="lead">Karaf is a lightweight, powerful, and enterprise ready modulith runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
         This modulith runtime supports several frameworks and different kind of applications: REST/API, Web, Spring Boot, and much more.</p>
-        <p>Last version <strong>4.3.6</strong> - (14/1/22)</p>
+        <p>Last version <strong>4.4.0</strong> - (22/4/22)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5">
@@ -195,7 +195,7 @@ permalink: /
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Manage bunch of clustered instances with <span class="text-muted">Karaf Cellar.</span></h2>
         <p class="lead">You have bunch of Karaf Runtime instances running ? You want to manage those instances as one, spreading the configuration, deployment, etc ? Karaf Cellar is for you. Karaf Cellar is a clustering solution for Karaf. It allows you to manage multiple instances, with synchronization between the instances.</p>
-        <p>Last version <strong>4.2.0</strong> - (18/07/20)</p>
+        <p>Last version <strong>4.2.1</strong> - (21/08/20)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5 order-md-1">
