--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
-            <p><strong>Karaf 4.2.16 has been released! (19/6/22)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes, including Pax URL 1.11.15. (<a href="/news.html">Details</a>)</p>
+            <p><strong>Karaf 4.2.16 has been released! (19/6/22)</strong> - This is a new release for Karaf 4.2.x series. This release is supposed to be the last one on the 4.2.x series. It contains mainly updates and couple of fixes, including Pax Logging 1.11.15. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
