--- a/news.html
+++ b/news.html
@@ -50,6 +50,18 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.2.16 has been released! <span class="text-muted">June 19, 2022</span></h3>
+                <p>Apache Karaf runtime 4.2.16 is a maintenance release. This release is supposed to be the last release on the 4.2.x series. It includes:
+                <ul>
+                  <li>Pax Logging 1.11.15 upgrade</li>
+                  <li>Pax URL 2.6.10 upgrade</li>
+                  <li>...</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="archives.html">Archives &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351218" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.4.0 has been released! <span class="text-muted">April 22, 2022</span></h3>
                 <p>Apache Karaf runtime 4.4.0 is a new milestone in Karaf runtime roadmap, starting the 4.4.x series. It includes:
                 <ul>
