Announce Apache Karaf runtime 4.4.1 release

--- a/archives.html
+++ b/archives.html
@@ -31,6 +31,20 @@ permalink: /archives
                 </thead>
                 <tbody>
                     <tr>
+                        <td>4.4.1</td>
+                        <td>
+                            <a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.zip.sha512">SHA512</a>]
+                        </td>
+                        <td>
+                            <a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td>
+                            <a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351548')">Release Notes</a>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>4.4.0</td>
                         <td>
                             <a href="https://archive.apache.org/dist/karaf/4.4.0/apache-karaf-4.4.0.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.4.0/apache-karaf-4.4.0.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.4.0/apache-karaf-4.4.0.tar.gz.sha512">SHA512</a>]<br>
