--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf 4.4.1 has been released! (14/7/22)</strong> - This is a maintenance release for Karaf 4.4.x series. It contains a lot of updates and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf 4.2.16 has been released! (19/6/22)</strong> - This is a new release for Karaf 4.2.x series. This release is supposed to be the last one on the 4.2.x series. It contains mainly updates and couple of fixes, including Pax Logging 1.11.15. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -96,13 +103,6 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf 4.2.12 has been released! (16/09/21)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -142,7 +142,7 @@ permalink: /
         <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
         <p class="lead">Karaf is a lightweight, powerful, and enterprise ready modulith runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
         This modulith runtime supports several frameworks and different kind of applications: REST/API, Web, Spring Boot, and much more.</p>
-        <p>Last version <strong>4.4.0</strong> - (22/4/22)</p>
+        <p>Last version <strong>4.4.1</strong> - (14/7/22)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5">
