--- a/news.html
+++ b/news.html
@@ -13,9 +13,9 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf runtime 4.4.0</a>
+                <a class="text-dark">Karaf runtime 4.4.1</a>
               </h3>
-              <div class="mb-1 text-muted">April 22, 2022</div>
+              <div class="mb-1 text-muted">July 14, 2022</div>
               <p class="card-text mb-auto">Apache Karaf 4.4.x series brings OSGi R8 support, Pax Web 8.0.x, Pax Logging 2.1.x, and a lot of otther improvements and updates.</p>
               <a href="#">Learn more</a>
             </div>
@@ -48,6 +48,21 @@ permalink: /news
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.4.1 has been released! <span class="text-muted">July 14, 2022</span></h3>
+                <p>Apache Karaf runtime 4.4.1 is a maintenance release, bringing a lot of dependency updates and fixes, especially:
+                <ul>
+                  <li>fix on the exported system packages</li>
+                  <li>fix on the config management in the features service</li>
+                  <li>upgrade to Pax Web 8.0.6, Pax URL 2.6.11, Pax Logging 2.1.3</li>
+                  <li>upgrade OSGi frameworks (both Felix Framework 7.0.5 and Equinox 3.18.0)</li>
+                  <li>upgrade to Spring 5.3.21 and 5.2.22.RELEASE</li>
+                  <li>...</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="archives.html">Archives &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351548" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.2.16 has been released! <span class="text-muted">June 19, 2022</span></h3>
