[KARAF-7587] - add GraphQL row to examples on the site

--- a/documentation.html
+++ b/documentation.html
@@ -308,8 +308,15 @@ permalink: /documentation
                     </tr>
                     <tr>
                         <td><strong>Websocket</strong></td>
-                        <td>this example show how to register a websocket in the Karaf HTTP Service.</td>
+                        <td>this example shows how to register a websocket in the Karaf HTTP Service.</td>
                         <td><a href="https://github.com/apache/karaf/tree/main/examples/karaf-websocket-example" target="_blank">
+                            <img src="/images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>GraphQL</strong></td>
+                        <td>this example shows how to use GraphQL in the context of a HTTP servlet, websocket and commands in Apache Karaf.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/main/examples/karaf-graphql-example" target="_blank">
                             <img src="/images/github.png" width="24px">
                         </a></td>
                     </tr>
