--- a/download.html
+++ b/download.html
@@ -14,29 +14,29 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.4.1</span></h3>
-              <div class="mb-1 text-muted">July 14, 2022</div>
+              <h3 class="mb-0 text-dark">Karaf OSGi Runtime <span class="text-muted">4.4.2</span></h3>
+              <div class="mb-1 text-muted">October 23, 2022</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.4.1/apache-karaf-4.4.1.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.4.2/apache-karaf-4.4.2.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.4.2/apache-karaf-4.4.2.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.4.2/apache-karaf-4.4.2.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.4.1/apache-karaf-4.4.1.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.4.2/apache-karaf-4.4.2.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.4.2/apache-karaf-4.4.2.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.4.2/apache-karaf-4.4.2.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.4.1/apache-karaf-4.4.1-src.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.4.2/apache-karaf-4.4.2-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.4.2/apache-karaf-4.4.2-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.4.2/apache-karaf-4.4.2-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.4.1/apache-karaf-4.4.1-src.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.4.1/apache-karaf-4.4.1-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.4.2/apache-karaf-4.4.2-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.4.2/apache-karaf-4.4.2-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.4.2/apache-karaf-4.4.2-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351548" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12352048" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -184,9 +184,9 @@ permalink: /download
                       <td>Pax Logging 2.1.3/log4j 2.18.0/logback 1.2.11</td>
                       <td>Pax Web 8.0.6/Jetty 9.4.48.v20220622</td>
                       <td class="text-success">Stable</td>
-                      <td>4.4.1</td>
                       <td>4.4.2</td>
-                      <td>Oct 22</td>
+                      <td>4.4.3</td>
+                      <td>Jan 23</td>
                     </tr>
                     <tr>
                       <td>4.3.x</td>
@@ -197,7 +197,7 @@ permalink: /download
                       <td class="text-success">Stable</td>
                       <td>4.3.7</td>
                       <td>4.3.8</td>
-                      <td>Jun 22</td>
+                      <td>Oct 22</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
