Add karaf 4.3.8 release

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@ permalink: /
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf runtime 4.3.8 has been released! (23/10/22)</strong> - This is a new release for Karaf 4.3.x series. It contains bug fixes, dependency updates and couple of improvements. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf 4.4.1 has been released! (14/7/22)</strong> - This is a maintenance release for Karaf 4.4.x series. It contains a lot of updates and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -79,34 +86,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf 4.2.15 has been released! (14/1/22)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes, including log4j 2.17.1 update fixing CVE-2021-44832, Felix FileInstall 3.7.4. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf 4.3.5 has been released! (19/12/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes, including log4j 2.17.0 update fixing CVE-2021-45105 and logback 1.2.9 fixing CVE-2021-42550. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf 4.2.14 has been released! (24/12/21)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes, including log4j 2.17.0 update fixing CVE-2021-45105 and logback 1.2.9 fixing CVE-2021-42550. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf 4.3.4 has been released! (18/12/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes, including log4j 2.16.0 update fixing CVE-2021-44228. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf 4.3.3 has been released! (7/9/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
