--- a/archives.html
+++ b/archives.html
@@ -73,6 +73,20 @@ permalink: /archives
                         </td>
                     </tr>
                     <tr>
+                        <td>4.3.8</td>
+                        <td>
+                            <a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8.zip.sha512">SHA512</a>]
+                        </td>
+                        <td>
+                            <a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.8/apache-karaf-4.3.8-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td>
+                            <a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351577')">Release Notes</a>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>4.3.7</td>
                         <td>
                             <a href="https://archive.apache.org/dist/karaf/4.3.7/apache-karaf-4.3.7.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.7/apache-karaf-4.3.7.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.7/apache-karaf-4.3.7.tar.gz.sha512">SHA512</a>]<br>
