--- a/news.html
+++ b/news.html
@@ -26,9 +26,9 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf runtime 4.3.7</a>
+                <a class="text-dark">Karaf runtime 4.3.8</a>
               </h3>
-              <div class="mb-1 text-muted">April 23, 2022</div>
+              <div class="mb-1 text-muted">October 23, 2022</div>
               <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.3.x series, containing many fixes and dependency updates.</p>
               <a href="#">Learn more</a>
             </div>
@@ -60,6 +60,13 @@ permalink: /news
                 </ul>
                 <a class="btn btn-outline-primary" href="archives.html">Archives &raquo;</a>
                 <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12352048" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.3.8 has been released! <span class="text-muted">October 23, 2022</span></h3>
+                <p>Apache Karaf runtime 4.3.8 is a maintenance release on the 4.3.x series, including many dependency updates, improvements and fixes.
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351577" target="_blank">Release Notes &raquo;</a>
               </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
