--- a/download.html
+++ b/download.html
@@ -44,7 +44,7 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.3.8</span></h3>
+              <h3 class="mb-0 text-dark">Karaf OSGi Runtime <span class="text-muted">4.3.8</span></h3>
               <div class="mb-1 text-muted">October 23, 2022</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
@@ -195,9 +195,9 @@ permalink: /download
                       <td>Pax Logging 2.0.16/log4j 2.17.1/logback 1.2.11</td>
                       <td>Pax Web 7.3.25/Jetty 9.4.46.v20220331</td>
                       <td class="text-success">Stable</td>
-                      <td>4.3.7</td>
                       <td>4.3.8</td>
-                      <td>Oct 22</td>
+                      <td>4.3.9</td>
+                      <td>Jan 22</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
