Announce Apache Karaf OSGi runtime 4.4.3 release

--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf runtime 4.4.2</a>
+                <a class="text-dark">Karaf OSGi runtime 4.4.3</a>
               </h3>
               <div class="mb-1 text-muted">October 23, 2022</div>
               <p class="card-text mb-auto">Apache Karaf 4.4.x series brings OSGi R8 support, Pax Web 8.0.x, Pax Logging 2.1.x, and a lot of otther improvements and updates.</p>
@@ -26,7 +26,7 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf runtime 4.3.8</a>
+                <a class="text-dark">Karaf OSGi runtime 4.3.8</a>
               </h3>
               <div class="mb-1 text-muted">October 23, 2022</div>
               <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.3.x series, containing many fixes and dependency updates.</p>
@@ -48,6 +48,21 @@ permalink: /news
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf OSGi runtime 4.4.3 has been released! <span class="text-muted">January 10, 2023</span></h3>
+                <p>Apache Karaf runtime 4.4.3 is a maintenance release, bringing a lot of dependency updates and fixes, especially:
+                <ul>
+                  <li>fix threads leak in karaf-maven-plugin:verify goal</li>
+                  <li>fix JMX RmiServer stub IP address assignation</li>
+                  <li>add shell:alias and instance:package shell commands</li>
+                  <li>fix SSH client on Windows</li>
+                  <li>a lot of dependency updates, especially Pax Web 8.0.15 and Aries JAX RS Whiteboard 2.0.2</li>
+                  <li>...</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="archives.html">Archives &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12352048" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf OSGi runtime 4.4.2 has been released! <span class="text-muted">October 23, 2022</span></h3>
