Announce Apache Karaf OSGi Runtime 4.3.9 release

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@ permalink: /
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf 4.3.9 has been released! (14/01/23)</strong> - This is a maintenance release for Karaf 4.3.x series. It contains a lot of updates and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf 4.4.2 has been released! (23/10/22)</strong> - This is a maintenance release for Karaf 4.4.x series. It contains a lot of updates and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
