--- a/news.html
+++ b/news.html
@@ -26,9 +26,9 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf OSGi runtime 4.3.8</a>
+                <a class="text-dark">Karaf OSGi runtime 4.3.9</a>
               </h3>
-              <div class="mb-1 text-muted">October 23, 2022</div>
+              <div class="mb-1 text-muted">January 14, 2023</div>
               <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.3.x series, containing many fixes and dependency updates.</p>
               <a href="#">Learn more</a>
             </div>
@@ -62,6 +62,21 @@ permalink: /news
                 </ul>
                 <a class="btn btn-outline-primary" href="archives.html">Archives &raquo;</a>
                 <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12352048" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf OSGi runtime 4.3.9 has been released! <span class="text-muted">January 14, 2023</span></h3>
+                <p>Apache Karaf runtime 4.3.9 is a maintenance release, bringing a lot of dependency updates and fixes, especially:
+                <ul>
+                  <li>fix threads leak in karaf-maven-plugin:verify goal</li>
+                  <li>fix JMX RmiServer stub IP address assignation</li>
+                  <li>add shell:alias and instance:package shell commands</li>
+                  <li>fix SSH client on Windows</li>
+                  <li>a lot of dependency updates</li>
+                  <li>...</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="archives.html">Archives &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12352383" target="_blank">Release Notes &raquo;</a>
               </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
