--- a/archives.html
+++ b/archives.html
@@ -1130,6 +1130,22 @@ permalink: /archives
                 </thead>
                 <tbody>
                     <tr>
+                        <td>2.10.0</td>
+                        <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                        <td><a href="https://archive.apache.org/dist/karaf/decanter/2.10.0/apache-karaf-decanter-2.10.0-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/decanter/2.10.0/apache-karaf-decanter-2.10.0-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/decanter/2.10.0/apache-karaf-decanter-2.10.0-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/decanter/2.10.0/apache-karaf-decanter-2.10.0-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/decanter/2.10.0/apache-karaf-decanter-2.10.0-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/decanter/2.10.0/apache-karaf-decanter-2.10.0-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351427')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>2.8.0</td>
+                        <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                        <td><a href="https://archive.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/decanter/2.9.0/apache-karaf-decanter-2.9.0-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350585')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>2.8.0</td>
                         <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
                         <td><a href="https://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz.sha512">SHA512</a>]<br>
