--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf Decanter 2.10.0 has been released! (24/02/23)</strong> - This is a maintenance release for Decanter 2.x series. It contains a lot of updates and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf 4.4.3 has been released! (10/01/23)</strong> - This is a maintenance release for Karaf 4.4.x series. It contains a lot of updates and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -86,13 +93,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf Decanter 2.9.0 has been released! (20/2/22)</strong> - This is a new release for Karaf Decanter 2.x series. It contains bunch of dependency updates and couple of improvements. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf 4.3.6 has been released! (14/1/22)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes, including log4j 2.17.1 update fixing CVE-2021-44832, Felix FileInstall 3.7.4. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
@@ -238,7 +238,7 @@ permalink: /
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Monitoring, alerting, and BAM with <span class="text-muted">Karaf Decanter.</span></h2>
         <p class="lead">You need a monitoring solution for Karaf and related ? You need a BAM (Business Activity Monitoring) platform for your application ? Karaf Decanter can be very convenient for you ! Decanter provides ready to use monitoring solution. It's also completely extensible and customizable.</p>
-        <p>Last version <strong>2.9.0</strong> - (20/2/22)</p>
+        <p>Last version <strong>2.10.0</strong> - (24/2/23)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5 order-md-1">
