--- a/news.html
+++ b/news.html
@@ -50,6 +50,17 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Decanter 2.10.0 has been released! <span class="text-muted">February 24, 2023</span></h3>
+                <p>Apache Karaf Decanter 2.10.0 is a major release on the 2.x series. It provides:
+                <ul>
+                  <li>bunch of dependency updates</li>
+                  <li>fix and improvement on the split parser</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351427" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf OSGi runtime 4.4.3 has been released! <span class="text-muted">January 10, 2023</span></h3>
                 <p>Apache Karaf runtime 4.4.3 is a maintenance release, bringing a lot of dependency updates and fixes, especially:
                 <ul>
