Move Karaf Cave subproject to Attic

--- a/news.html
+++ b/news.html
@@ -50,6 +50,13 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Cave project is no longer maintain and has been moved to attic <span class="text-muted">April 15, 2023</span></h3>
+                <p>As there is no more interest of users and no active contributors, the Karaf team decided to move the Karaf Cave subproject to attic.</p>
+                <p>The archives are still available for download.</p>
+                <a class="btn btn-outline-primary" href="archives.html">Archives &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Decanter 2.10.0 has been released! <span class="text-muted">February 24, 2023</span></h3>
                 <p>Apache Karaf Decanter 2.10.0 is a major release on the 2.x series. It provides:
                 <ul>
