--- a/archives.html
+++ b/archives.html
@@ -1051,6 +1051,14 @@ permalink: /archives
                 </thead>
                 <tbody>
                     <tr>
+                        <td>4.2.1</td>
+                        <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                        <td><a href="https://archive.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="https://archive.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343975')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>4.2.0</td>
                         <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
                         <td><a href="https://archive.apache.org/dist/karaf/cave/4.2.0/apache-karaf-cave-4.2.0-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/cave/4.2.0/apache-karaf-cave-4.2.0-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/cave/4.2.0/apache-karaf-cave-4.2.0-src.tar.gz.sha512">SHA512</a>]<br>
