--- a/community.html
+++ b/community.html
@@ -377,7 +377,7 @@ permalink: /community
                     <td><a href="http://blog.nanthrax.net">Jean-Baptiste Onofr&eacute;</a></td>
                     <td>jbonofre</td>
                     <td><img src="/images/check.gif"/></td>
-                    <td><a href="http://www.talend.com">Talend</a></td>
+                    <td><a href="https://www.dremio.com">Dremio</a></td>
                 </tr>
                 <tr>
                     <td>Andreas Pieber</td>
